manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orbital-satellite-tracker
spec:
  selector:
    app: orbital-satellite-tracker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
