manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orbital-satellite-tracker-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
spec:
  rules:
    - host: satellites.sodisol.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: orbital-satellite-tracker
                port:
                  number: 80
  tls:
    - hosts:
        - satellites.sodisol.com
      secretName: orbital-satellite-tracker-tls
